# orgforge

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  EVAL.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  simulation.log.txt
config/: clearweave_180d.yaml  config.yaml  source_realism.yaml
docs/: orgforge-corpus-realism-handoff.md  source-realism-calibration-runbook.md
eval/: agentic_eval_harness-v2.py  agentic_eval_harness.py  build_leaderboard.py  comparison-v2.py  eval_consistency.py  eval_divergence.py  eval_e2e.py  eval_harness.py  export_to_hf.py  graph_eval_track.py  org_dynamics_question_builder.py  org_dynamics_scorer.py  questions_jsonl.py  rescore.py  retrieval_extensions.py  scorer.py
scripts/: ollama-entrypoint.sh
src/: agent_factory.py  artifact_registry.py  build_clearweave_corpus.py  build_source_realism_fixture.py  causal_chain_handler.py  clearweave_corpus.py  config_loader.py  confluence_writer.py  corpus_pipeline.py  corpus_validator.py  crm_system.py  day_planner.py  embed_worker.py  external_email_ingest.py  flow.py  genesis.py  graph_dynamics.py  insider_threat.py  knowledge_scenarios.py  llm_resilience.py  memory.py  native_timestamps.py  normal_day.py  observation_realism.py  org_lifecycle.py  plan_validator.py  planner_models.py  post_sim_artifacts.py  realism_scorecard.py  run_resilience.py  sim_clock.py  source_actions.py  source_locators.py  source_realism.py  source_renderers.py  ticket_assigner.py
tests/: conftest.py  test_causal_chain_handler.py  test_clearweave_corpus.py  test_confluence_writer.py  (+23 more)
(+32 files in other folders)
